--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,7 @@
     /* Path aliases */
     "baseUrl": ".",
     "paths": {
-      "@*": ["./src/*"],
+      "@/*": ["./src/*"],
       "@assets/*": ["./src/assets/*"],
       "@context/*": ["./src/context/*"],
       "@types/*": ["./src/types/*"],
